# fastapi-project

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6429a9a37d75_first_revision.py  c3be98bbc110_first_revision.py
app/: backend_pre_start.py  database.py  items_data.py  main.py
app/core/: config.py  security.py
app/crud/: base.py  crud_item.py  crud_user.py
app/db/: di.py  init_db.py  session.py
app/models/: item.py  user.py
app/routers/: items.py  users.py
app/schemas/: user.py
app/tests/: test_app.py
