[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
anyio = "^3.6.2"
asgiref = "^3.5.2"
bcrypt = "^4.0.1"
click = "^8.1.3"
fastapi = "^0.88.0"
greenlet = "^2.0.1"
h11 = "^0.14.0"
httptools = "^0.5.0"
idna = "^3.4"
importlib-metadata = "^5.1.0"
importlib-resources = "^5.10.0"
mako = "^1.2.4"
markupsafe = "^2.1.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.6"}
python-dotenv = "^0.21.0"
pyyaml = "^6.0"
sniffio = "^1.3.0"
sqlalchemy = "^1.4.44"
starlette = "^0.22.0"
typing-extensions = "^4.4.0"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
watchgod = "^0.8.2"
websockets = "^10.4"
zipp = "^3.11.0"
psycopg2 = "^2.9.5"
pytest = "^7.2.0"
httpx = "^0.23.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
